add recomendations section

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turismo ITC</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Fraunces:opsz,wght@9..144,700&family=Karla:wght@300;400;700&family=Lexend+Deca&family=Montserrat:wght@300;400;700;900&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../dist/output.css">
     
 </head>
 <body class="h-screen w-full">
-    <main class="w-full h-3/4 p-5 flex flex-col  bg-orange-400">
+    <main class="w-full h-3/4 p-5 flex flex-col bg-iguazu bg-orange-400">
         <header class="h-9 mb-5 flex justify-end items-center">
             <button class="h-8 w-14 rounded-full bg-white shadow-sm">
                 moon
@@ -23,9 +27,47 @@
             </button>
         </footer>
     </main>
+    <section id="recomendations" class="w-full h-72 flex flex-col justify-center">
+        <h1 class="text-2xl text-red-travel">Nuestras recomendaciones</h1>
+        <article class="w-full flex justify-center space-x-2">
+            <div class="w-44 h-height-card-rec bg-green-travel rounded-lg overflow-hidden">
+                <img src="https://i.postimg.cc/wMf9bKLW/Any-Conv-com-puerto-iguazu.webp" alt="">
+                <div class="p-4">
+                    <h2 class="font-bold text-slate-100">
+                        Puerto iguazú
+                    </h2>
+                    <p class="text-slate-500 text-xs"> 
+                        Paisajes Maravillosos
+                    </p>
+                </div>
+            </div>
 
+            <div class="w-44 h-height-card-rec bg-green-travel rounded-lg overflow-hidden">
+                <img src="https://i.postimg.cc/wMf9bKLW/Any-Conv-com-puerto-iguazu.webp" alt="">
+                <div class="p-4">
+                    <h2 class="font-bold text-slate-100">
+                        Puerto iguazú
+                    </h2>
+                    <p class="text-slate-500 text-xs"> 
+                        Paisajes Maravillosos
+                    </p>
+                </div>
+            </div>
 
+            <div class="w-44 h-height-card-rec bg-green-travel rounded-lg overflow-hidden">
+                <img src="https://i.postimg.cc/wMf9bKLW/Any-Conv-com-puerto-iguazu.webp" alt="">
+                <div class="p-4">
+                    <h2 class="font-bold text-slate-100">
+                        Puerto iguazú
+                    </h2>
+                    <p class="text-slate-500 text-xs"> 
+                        Paisajes Maravillosos
+                    </p>
+                </div>
+            </div>
 
+        </article>
+    </section>
 
 
 </body>
