--- a/src/index.html
+++ b/src/index.html
@@ -14,54 +14,89 @@
     
 </head>
 <body class="h-screen w-full">
-    <main class="w-full h-3/4 p-5 flex flex-col bg-iguazu bg-orange-400">
-        <header class="h-9 mb-5 flex justify-end items-center">
-            <button class="h-8 w-14 rounded-full bg-white shadow-sm">
-                moon
-            </button> 
+
+    <main class="w-full h-3/4 p-5 flex flex-col bg-iguazu bg-no-repeat bg-cover sm:p-0">
+        <header class="h-9 mb-5 flex justify-end items-center sm:bg-white sm:h-height-header sm:justify-between sm:p-5">
+            <h1 class="text-red-travel font-Montserrat font-bold text-lg max-sm:hidden">Turismo ITC</h1>
+            <ul class="flex space-x-3 text-red-travel font-Montserrat font-bold text-sm max-sm:hidden">
+                <li>Lugares</li>
+                <li>Alojamientos</li>
+                <li>FAQs</li>
+                <li>Sobre nosotros</li>
+            </ul> 
+
+            <div>
+                <button class="max-sm:hidden">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </button>
+                <button class="h-8 w-14 rounded-full bg-white shadow-sm sm:shadow-none sm:bg-transparent">
+                    <i class="fa-solid fa-moon text-red-travel"></i>
+                </button> 
+                <button class="max-sm:hidden">
+                    <i class="fa-solid fa-user"></i>
+                </button>
+            </div>
+            
         </header>
-        <footer class="h-full flex flex-col justify-between">
-            <input class="h-12 rounded-full text-center shadow-sm" type="search" placeholder="Cataratas">
-            <button class="w-48 h-12 mx-auto text-red-travel rounded-full bg-white shadow-sm">
+        <footer class="h-full flex flex-col justify-between sm:ps-5 sm:justify-normal sm:space-y-5">
+            <input class="h-12 rounded-full text-center shadow-sm outline-none sm:hidden" type="search" placeholder="Cataratas">
+            <p class="text-red-travel border-red-travel border-2 text-2xl font-Montserrat font-bold w-72 rounded-2xl p-4 bg-white/50 max-sm:hidden">
+                Encuentra ese lugar ideal para tus vacaciones soñadas
+            </p>
+            <button class="w-48 h-12 mx-auto text-red-travel rounded-full bg-white shadow-sm sm:mx-0">
                 Explorar más
             </button>
         </footer>
     </main>
-    <section id="recomendations" class="w-full h-72 flex flex-col justify-center">
-        <h1 class="text-2xl text-red-travel">Nuestras recomendaciones</h1>
-        <article class="w-full flex justify-center space-x-2">
-            <div class="w-44 h-height-card-rec bg-green-travel rounded-lg overflow-hidden">
-                <img src="https://i.postimg.cc/wMf9bKLW/Any-Conv-com-puerto-iguazu.webp" alt="">
+
+    <section class="p-4 mt-3">
+        <h2 class="text-2xl text-red-travel">Nuestras recomendaciones</h2>
+        <article class="w-auto h-72 flex items-center overflow-x-auto overscroll-x-contain space-x-6 min-laptop:h-80">
+
+            <div class="Card bg-black min-laptop:w-64 min-laptop:h-72">
+                <img class="rounded-t-lg h-4/6 w-full" src="https://i.postimg.cc/wMf9bKLW/Any-Conv-com-puerto-iguazu.webp" alt="">
                 <div class="p-4">
-                    <h2 class="font-bold text-slate-100">
+                    <h3 class="font-bold font-Montserrat">
                         Puerto iguazú
-                    </h2>
-                    <p class="text-slate-500 text-xs"> 
+                    </h3>
+                    <p class="text-xs font-Montserrat"> 
                         Paisajes Maravillosos
                     </p>
                 </div>
             </div>
 
-            <div class="w-44 h-height-card-rec bg-green-travel rounded-lg overflow-hidden">
-                <img src="https://i.postimg.cc/wMf9bKLW/Any-Conv-com-puerto-iguazu.webp" alt="">
+            <div class="Card bg-black min-laptop:w-64 min-laptop:h-72">
+                <img class="rounded-t-lg h-4/6 w-full " src="https://i.postimg.cc/3NJKBr44/Any-Conv-com-ushuaia.webp" alt="">
                 <div class="p-4">
-                    <h2 class="font-bold text-slate-100">
-                        Puerto iguazú
-                    </h2>
-                    <p class="text-slate-500 text-xs"> 
-                        Paisajes Maravillosos
+                    <h3 class="font-bold font-Montserrat">
+                        Ushuaia
+                    </h3>
+                    <p class="text-xs font-Montserrat"> 
+                        El fin del mundo
                     </p>
                 </div>
             </div>
 
-            <div class="w-44 h-height-card-rec bg-green-travel rounded-lg overflow-hidden">
-                <img src="https://i.postimg.cc/wMf9bKLW/Any-Conv-com-puerto-iguazu.webp" alt="">
+            <div class="Card bg-black min-laptop:w-64 min-laptop:h-72">
+                <img class="rounded-t-lg h-4/6 w-full" src="https://i.postimg.cc/N0mfGzvM/Any-Conv-com-cordob.webp" alt="">
                 <div class="p-4">
-                    <h2 class="font-bold text-slate-100">
-                        Puerto iguazú
-                    </h2>
-                    <p class="text-slate-500 text-xs"> 
-                        Paisajes Maravillosos
+                    <h3 class="font-bold font-Montserrat">
+                        Cafayate
+                    </h3>
+                    <p class="text-xs font-Montserrat"> 
+                        Lugares de ensueño
+                    </p>
+                </div>
+            </div>
+
+            <div class="Card bg-black min-laptop:w-64 min-laptop:h-72">
+                <img class="rounded-t-lg h-4/6 w-full" src="https://i.postimg.cc/FzSvWSSD/photo-1589481169991-40ee02888551.webp" alt="">
+                <div class="p-4">
+                    <h3 class="font-bold font-Montserrat">
+                        Seattle
+                    </h3>
+                    <p class="text-xs font-Montserrat"> 
+                        Big City
                     </p>
                 </div>
             </div>
@@ -70,5 +105,73 @@
     </section>
 
 
+    <section class="w-full flex space-y-5 flex-col items-center py-3 sm:grid sm:grid-cols-1 sm:p-4 sm:justify-center sm:bg-red-travel">
+        <div class="CardFull bg-isla bg-cover bg-center shadow-md sm:w-full">
+            <h4 class="text-2xl font-Montserrat font-extrabold text-white">Choele Choel</h4>
+            <p class="w-24 text-sm font-Montserrat text-white ">Paisajes para enamorarse.</p>
+        </div>
+
+        <div class="CardFull bg-cafayate bg-cover bg-center shadow-md sm:w-full">
+            <h4 class="text-2xl font-Montserrat font-extrabold text-white">Cafayate</h4>
+            <p class="text-sm font-Montserrat text-white ">Lugares de ensueños.</p>
+        </div>
+
+        <div class="CardFull bg-calafate bg-cover bg-center shadow-md sm:w-full">
+            <h4 class="text-2xl font-Montserrat font-extrabold text-white">Calafate</h4>
+            <p class="w-24 text-sm font-Montserrat text-white ">Los glaciares a tu alcance.</p>
+        </div>
+
+        <div class="CardFull bg-bariloche bg-cover bg-center shadow-md sm:w-full">
+            <h4 class="text-2xl font-Montserrat font-extrabold text-white">Bariloche</h4>
+            <p class="w-24 text-sm font-Montserrat text-white ">Monatañas, nieve y sol.</p>
+        </div>
+    </section>
+
+
+    <section class="flex flex-col px-8 py-10">
+        <h5 class="text-2xl text-red-travel font-bold font-Montserrat">Preguntas frecuentes:</h5>
+        <article class="my-3">
+            <h5 class="text-red-travel text-base font-Montserrat font-semibold">
+                Metodos de pago
+            </h5>
+            <p class="font-Montserrat text-xs font-medium">
+                Aceptamos VISA, MasterdCard, AmericanExpress, Paypal y Binance.
+            </p>
+        </article>
+        <article class="my-3">
+            <h5 class="text-red-travel text-base font-Montserrat font-semibold">
+                Politicas de cancelación
+            </h5>
+            <p class="font-Montserrat text-xs font-medium">
+                Una vez realizado el pago tiene 24hrs para arrepentirse. Pasado ese tiempo no devolvera el pago.
+            </p>
+        </article>
+        <article class="my-3">
+            <h5 class="text-red-travel text-base font-Montserrat font-semibold">
+                Extension de estadia
+            </h5>
+            <p class="font-Montserrat text-xs font-medium">
+                En caso de querer extender su estadia en el destino vacacional elegido estará sujeto a disponibilidad hotelera.
+            </p>
+        </article>
+    </section>
+
+    <section class="p-5 bg-gray-travel">
+        <h6 class="text-dark-gray-travel text-lg font-semibold font-Montserrat">Nosotros</h6>
+        <ul class="text-dark-gray-travel text-base font-Montserrat font-medium">
+            <li>Inversiones</li>
+            <li>Trabaja con nosotros</li>
+            <li>Políticas de privacidad</li>
+            <li>Términos y condiciones</li>
+            <li>Publicita tu localidad</li>
+            <li>Siguenos en las redes</li>
+            <li class="text-2xl">
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+            </li>
+        </ul>
+    </section>
+
+    <script src="https://kit.fontawesome.com/71e127b5d0.js" crossorigin="anonymous"></script>
 </body>
 </html>
