--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turismo ITC</title>
 
+    <!-- Google fonts - Montserrat -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Fraunces:opsz,wght@9..144,700&family=Karla:wght@300;400;700&family=Lexend+Deca&family=Montserrat:wght@300;400;700;900&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 
+    <!-- Styles -->
     <link rel="stylesheet" href="../dist/output.css">
     
 </head>
@@ -123,7 +125,8 @@
 
 
     <section class="w-full flex space-y-5 flex-col items-center p-3 sm:grid sm:grid-cols-1 sm:p-4 sm:justify-center  min-laptop:grid-rows-1 min-laptop:grid-cols-2 min-laptop:space-y-0 min-laptop:gap-3">
-        <div class="CardFull bg-isla bg-cover bg-center shadow-md sm:w-full min-laptop:col-span-2 min-laptop:h-wheader-title-tablet min-laptop:flex min-laptop:flex-col min-laptop:text-right min-laptop:p-14 min-laptop:bg-mendoza">
+
+        <div class="CardFull bg-isla sm:w-full min-laptop:col-span-2 min-laptop:h-wheader-title-tablet min-laptop:flex min-laptop:flex-col min-laptop:text-right min-laptop:p-14 min-laptop:bg-mendoza">
             <h4 class="text-2xl font-Montserrat font-extrabold text-white min-laptop:hidden">Choele Choel</h4>
             <p class="w-24 text-sm font-Montserrat text-white min-laptop:hidden">Paisajes para enamorarse.</p>
 
@@ -131,7 +134,7 @@
             <p class="w-full text-xl font-Montserrat text-white max-min-laptop:hidden">Incluye alojamiento y 3 excursiones.</p>
         </div>
 
-        <div class="CardFull bg-cafayate bg-cover bg-center shadow-md sm:w-full min-laptop:row-span-2 min-laptop:h-height-cafayate-tb min-laptop:flex min-laptop:flex-col min-laptop:text-right min-laptop:p-10 min-laptop:bg-cordoba">
+        <div class="CardFull bg-cafayate sm:w-full min-laptop:row-span-2 min-laptop:h-height-cafayate-tb min-laptop:flex min-laptop:flex-col min-laptop:text-right min-laptop:p-10 min-laptop:bg-cordoba">
             <h4 class="text-2xl font-Montserrat font-extrabold text-white min-laptop:hidden">Cafayate</h4>
             <p class="text-sm font-Montserrat text-white min-laptop:hidden">Lugares de ensueños.</p>
 
@@ -139,7 +142,7 @@
             <p class="w-full text-xl font-Montserrat text-white max-min-laptop:hidden">4 días, 3 noches, para descubrir las sierras y su paz.</p>
         </div>
 
-        <div class="CardFull bg-calafate bg-cover bg-center shadow-md sm:w-full min-laptop:h-height-caf2-tb min-laptop:flex min-laptop:flex-col min-laptop:text-right min-laptop:p-10 min-laptop:bg-madryn min-laptop:justify-end">
+        <div class="CardFull bg-calafate sm:w-full min-laptop:h-height-caf2-tb min-laptop:flex min-laptop:flex-col min-laptop:text-right min-laptop:p-10 min-laptop:bg-madryn min-laptop:justify-end">
             <h4 class="text-2xl font-Montserrat font-extrabold text-white min-laptop:hidden">Calafate</h4>
             <p class="w-24 text-sm font-Montserrat text-white min-laptop:hidden">Los glaciares a tu alcance.</p>
 
@@ -147,42 +150,47 @@
             <p class="w-full text-xl font-Montserrat text-white max-min-laptop:hidden">3 días y 2 noches. Incluye clase de buceo para dos!</p>
         </div>
 
-        <div class="CardFull bg-bariloche bg-cover bg-center shadow-md sm:w-full min-laptop:h-height-caf2-tb min-laptop:flex min-laptop:flex-col min-laptop:text-right min-laptop:p-10 min-laptop:bg-chocon min-laptop:justify-end">
+        <div class="CardFull bg-bariloche sm:w-full min-laptop:h-height-caf2-tb min-laptop:flex min-laptop:flex-col min-laptop:text-right min-laptop:p-10 min-laptop:bg-chocon min-laptop:justify-end">
             <h4 class="text-2xl font-Montserrat font-extrabold text-white min-laptop:hidden">Bariloche</h4>
             <p class="w-24 text-sm font-Montserrat text-white min-laptop:hidden ">Monatañas, nieve y sol.</p>
 
             <h4 class="text-3xl font-Montserrat font-extrabold text-white max-min-laptop:hidden">Villa El Chocon</h4>
             <p class="w-full text-xl font-Montserrat text-white max-min-laptop:hidden">3 días y 2 noches. Incluye paseo en kayac.</p>
         </div>
+
     </section>
 
 
     <section class="flex flex-col px-8 py-10">
         <h5 class="text-2xl text-red-travel font-bold font-Montserrat min-laptop:text-3xl">Preguntas frecuentes:</h5>
+
         <article class="my-3">
-            <h5 class="text-red-travel text-base font-Montserrat font-semibold min-laptop:text-2xl">
+            <h5 class="Titulo_pago">
                 Metodos de pago
             </h5>
-            <p class="font-Montserrat text-xs font-medium min-laptop:text-sm">
+            <p class="Parrafo_pago">
                 Aceptamos VISA, MasterdCard, AmericanExpress, Paypal y Binance.
             </p>
         </article>
+
         <article class="my-3">
-            <h5 class="text-red-travel text-base font-Montserrat font-semibold min-laptop:text-2xl">
+            <h5 class="Titulo_pago">
                 Politicas de cancelación
             </h5>
-            <p class="font-Montserrat text-xs font-medium min-laptop:text-sm">
+            <p class="Parrafo_pago">
                 Una vez realizado el pago tiene 24hrs para arrepentirse. Pasado ese tiempo no devolvera el pago.
             </p>
         </article>
+
         <article class="my-3">
-            <h5 class="text-red-travel text-base font-Montserrat font-semibold min-laptop:text-2xl">
+            <h5 class="Titulo_pago">
                 Extension de estadia
             </h5>
-            <p class="font-Montserrat text-xs font-medium min-laptop:text-sm">
+            <p class="Parrafo_pago">
                 En caso de querer extender su estadia en el destino vacacional elegido estará sujeto a disponibilidad hotelera.
             </p>
         </article>
+        
     </section>
 
     <section class="p-5 bg-gray-travel">
